resolved categories cut off by space char & label styling on profile page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -298,9 +298,11 @@ select {
 }
 
 
-.yellow-text {
-    color: var(--light-yellow);
+.light-yellow-text {
+    color: var(--light-yellow)!important;
 }
+
+
 
 .profile-card ::placeholder {
     color: var(--light-yellow) !important;
